[package]
name = "proc-find"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A command line tool to search for and manage processes (using listened ports and more.)"
categories = [
    "development-tools",
    "development-tools::debugging",
    "development-tools::testing",
    "command-line-utilities",
]

keywords = [
    "port",
    "listening",
    "process",
    "netstat",
    "ps",
]


[[bin]]
name = "proc"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = "3.0.13"
libproc = "0.10.0"
netstat2 = "0.9.1"
shell-escape = "0.1.5"
sysinfo = "0.23.0"
tabular = "0.2.0"
users = "0.11.0"
